--- a/Animationen mit GDI+/Animationen mit GDI+/Animationen mit GDI+.csproj
+++ b/Animationen mit GDI+/Animationen mit GDI+/Animationen mit GDI+.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EE88AEDD-6E45-4E8C-B120-9C2DF1F8FE13}</ProjectGuid>
+    <ProjectGuid>{63540703-90BF-4C4E-854A-FEF590CC9B6F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Pong_0._1</RootNamespace>
-    <AssemblyName>Pong 0.1</AssemblyName>
+    <RootNamespace>Animationen_mit_GDI_</RootNamespace>
+    <AssemblyName>Animationen mit GDI+</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -54,9 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
