--- a/Pong 0.1/Pong 0.1/Pong 0.1.csproj
+++ b/Pong 0.1/Pong 0.1/Pong 0.1.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsForms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingsForms.Designer.cs">
+      <DependentUpon>SettingsForms.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
