--- a/Pong 0.1/Pong 0.1/Pong 0.1.csproj
+++ b/Pong 0.1/Pong 0.1/Pong 0.1.csproj
@@ -83,6 +83,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SettingsForms.resx">
+      <DependentUpon>SettingsForms.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
