--- a/Pong 0.1/Pong 0.1/Pong 0.1.csproj
+++ b/Pong 0.1/Pong 0.1/Pong 0.1.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collider.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
