--- a/Pong 0.1/Pong 0.1/Pong 0.1.csproj
+++ b/Pong 0.1/Pong 0.1/Pong 0.1.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collider.cs" />
+    <Compile Include="FontManager.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +88,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\NIAGSOL.TTF" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
